feat: :sparkles: initial setup clients component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<router-outlet></router-outlet>
+<!-- Main Container -->
+<div class="flex w-full h-full">
+  <!-- Side Navigation -->
+  <app-sidenav></app-sidenav>
+  <!-- End Side Navigation -->
+
+  <!-- Main Content -->
+  <div class="flex-col w-full px-8 py-4">
+    <!-- Header Nav -->
+    <app-headernav></app-headernav>
+    <!-- End Header Nav -->
+
+    <!-- Router -->
+    <router-outlet></router-outlet>
+    <!-- End Router -->
+  </div>
+  <!-- End Content -->
+
+</div>
+<!-- End Main Container -->
