--- a/src/app/clients/clients/clients.component.html
+++ b/src/app/clients/clients/clients.component.html
@@ -1,1 +1,38 @@
-<p>clients works!</p>
+<!-- Main Container -->
+<div class="flex-col justify-between w-full px-4 py-12 h-4/5">
+
+  <!-- Title -->
+  <div class="flex items-center space-x-4">
+    <svg routerLink="clientes" xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 text-brand" fill="none"
+      viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+    </svg>
+    <h1 class="text-5xl font-bold">{{title}}</h1>
+  </div>
+  <!-- End title -->
+
+  <!-- Content -->
+  <!-- <div *ngFor="let client of clients$ | async">
+    {{client.name}}
+  </div> -->
+  <!-- End Content -->
+
+  <!-- No Clients -->
+  <div class="flex flex-col items-center justify-center w-full h-full space-y-4">
+
+    <p>Aun no tienes clientes creados</p>
+    <!-- Add Client Btn -->
+    <button class="btn-primary hover:bg-green-900">
+      <span>Crear nuevo cliente</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+    <!-- End Add Client Btn -->
+
+  </div>
+  <!-- End No Clients -->
+</div>
+<!-- End Main Container -->
