--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 /* You can add global styles to this file, and also import other style files */
+
+@layer components {
+  html, body {
+    height: 100%;
+  }
+  .btn-primary {
+    @apply flex items-center justify-center px-4 py-2 space-x-2 text-white rounded-md bg-brand focus:outline-none
+  }
+}
