--- a/src/app/components/headernav/headernav.component.html
+++ b/src/app/components/headernav/headernav.component.html
@@ -2,10 +2,10 @@
   <!-- Links -->
   <ul class="flex space-x-12">
     <li>
-      <a href="#">Global</a>
+      <a>Global</a>
     </li>
     <li>
-      <a class="text-gray-400" href="#">SIBUC</a>
+      <a class="text-gray-400">SIBUC</a>
     </li>
   </ul>
   <!-- End Links -->
