--- a/src/app/clients/clients/clients.component.html
+++ b/src/app/clients/clients/clients.component.html
@@ -13,20 +13,23 @@
   <!-- End title -->
 
   <!-- Clients List -->
-  <app-client-list *ngIf="!(loader$ | async)" [clients]="clients$ | async"></app-client-list>
+  <app-client-list *ngIf="(!(loader$ | async) && !showForm)" [clients]="clients$ | async"></app-client-list>
   <!-- End Clients List -->
+
+  <!-- Form to add client -->
+  <app-client-form *ngIf="showForm"></app-client-form>
+  <!-- Add Client -->
 
   <!-- Loader -->
   <app-loader *ngIf="loader$ |async"></app-loader>
   <!-- End Loader -->
-
   <!-- No Clients -->
   <div *ngIf="((clients$ |async)?.length === 0) && !(loader$ | async)"
     class="flex flex-col items-center justify-center w-full h-full space-y-4">
     <p>Aun no tienes clientes creados</p>
 
     <!-- Add Client Btn -->
-    <button class="btn-primary hover:bg-green-900">
+    <button (click)="showForm = true" class="btn-primary hover:bg-green-900">
       <span>Crear nuevo cliente</span>
       <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
