add logic to create clients

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -36,11 +36,13 @@
       <div class="flex items-center justify-center w-full space-x-8">
         <button (click)="signIn()" [ngClass]="{'opacity-40 cursor-default': !loginForm.valid}"
           [disabled]="!loginForm.valid" class="w-44 btn-primary">
-          <span>Iniciar Sesión</span> <svg *ngIf="loader$ | async" xmlns="http://www.w3.org/2000/svg"
-            class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <span>Iniciar Sesión</span>
+          <svg *ngIf="loader$ | async" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 animate-spin" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
-          </svg></button>
+          </svg>
+        </button>
       </div>
       <!-- Form buttons -->
     </div>
