--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col items-center justify-center w-full h-full space-y-4">
+<div class="flex flex-col items-center justify-center h-full w-[300px] sm:w-full space-y-4 overflow-x-auto">
   <!-- Client Table -->
-  <table class="w-full text-center table-auto">
+  <table class="w-full text-xs text-center table-auto sm:text-lg">
     <thead>
       <tr>
         <th></th>
