--- a/src/app/components/headernav/headernav.component.html
+++ b/src/app/components/headernav/headernav.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between w-full">
   <!-- Links -->
-  <ul class="flex space-x-12">
+  <ul class="flex space-x-2 sm:space-x-12">
     <li>
       <a>Global</a>
     </li>
