--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <!-- End Side Navigation -->
 
   <!-- Main Content -->
-  <div class="flex-col w-full px-8 py-4">
+  <div class="flex-col w-full p-2 sm:px-8 sm:py-4">
     <!-- Header Nav -->
     <app-headernav *ngIf="auth$ | async"></app-headernav>
     <!-- End Header Nav -->
