--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,9 +1,9 @@
 <!-- Side Nav -->
-<div [ngClass]="{'w-14': !isOpen}" (mouseenter)="toggleSideBar()" (mouseleave)="toggleSideBar()"
-  class="flex flex-col items-center h-full transition-all ease-in w-60 bg-brand">
+<div [ngClass]="{'w-14': !isOpen, 'sm:w-60' : isOpen}" (mouseenter)="toggleSideBar()" (mouseleave)="toggleSideBar()"
+  class="flex flex-col items-center w-12 h-full transition-all ease-in sm:w-12 bg-brand">
 
   <!-- Logo -->
-  <img class="w-40 mb-8" src="assets/img/logo-white.png" alt="Mejor en Bici">
+  <img class="mb-8 w-14 sm:w-40" src="assets/img/logo-white.png" alt="Mejor en Bici">
   <!-- End Logo -->
 
   <!-- Links -->
@@ -13,7 +13,7 @@
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
         d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
     </svg>
-    <a *ngIf="isOpen" routerLink="clientes">Clientes</a>
+    <a *ngIf="isOpen" class="hidden sm:flex" routerLink="clientes">Clientes</a>
   </div>
   <!-- End Links -->
 
