--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,9 @@
     height: 100%;
   }
   .btn-primary {
-    @apply flex items-center justify-center px-4 py-2 space-x-2 text-white rounded-md bg-brand focus:outline-none
+    @apply flex items-center justify-center p-2 sm:px-4 sm:py-2 sm:space-x-2 text-white rounded-md bg-brand focus:outline-none
+  }
+  label {
+    @apply text-sm sm:text-lg
   }
 }
