--- a/src/app/clients/clients/clients.component.html
+++ b/src/app/clients/clients/clients.component.html
@@ -1,8 +1,7 @@
 <!-- Main Container -->
 <div class="flex-col justify-between w-full py-12 sm:px-4 h-4/5">
-
-  <!-- Title -->
   <div class="flex justify-between">
+    <!-- Title -->
     <div class="flex items-center space-x-2 sm:space-x-4">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 sm:w-12 sm:h-12 text-brand" fill="none" viewBox="0 0 24 24"
         stroke="currentColor">
@@ -11,9 +10,9 @@
       </svg>
       <h1 class="font-bold text:2xl sm:text-5xl">{{title}}</h1>
     </div>
-
+    <!-- End Title -->
     <!-- Add Client Btn -->
-    <button *ngIf="!showForm" (click)="showForm = true" class="btn-primary hover:bg-green-900">
+    <button routerLink="nuevo-cliente" class="btn-primary hover:bg-green-900">
       <span class="hidden sm:flex">Crear nuevo cliente</span>
       <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -22,37 +21,6 @@
     </button>
     <!-- End Add Client Btn -->
   </div>
-  <!-- End title -->
-
-  <!-- Clients List -->
-  <app-client-list *ngIf="(!(loader$ | async) && !showForm && (clients$ | async)?.length )"
-    [clients]="clients$ | async"></app-client-list>
-  <!-- End Clients List -->
-
-  <!-- Form to add client -->
-  <app-client-form (cancel)="showForm = false" [loader]="loader$ | async" (createClient)="onCreateClient($event)"
-    [users]="users$ | async" *ngIf="showForm"></app-client-form>
-  <!-- Add Client -->
-
-  <!-- Loader -->
-  <app-loader *ngIf="loader$ |async"></app-loader>
-  <!-- End Loader -->
-  <!-- No Clients -->
-  <div *ngIf="((clients$ |async)?.length === 0) && !showForm && !(loader$ | async)"
-    class="flex flex-col items-center justify-center w-full h-full space-y-4">
-    <p>Aun no tienes clientes creados</p>
-
-    <!-- Add Client Btn -->
-    <button (click)="showForm = true" class="btn-primary hover:bg-green-900">
-      <span>Crear nuevo cliente</span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </button>
-    <!-- End Add Client Btn -->
-
-  </div>
-  <!-- End No Clients -->
+  <router-outlet></router-outlet>
 </div>
 <!-- End Main Container -->
